// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders component with custom image element 1`] = `
<div
  class="EmptyState"
  data-test-id="cf-ui-empty-state"
>
  <div
    class="EmptyState_container"
  >
    <div
      class="EmptyState_element"
    >
      <img
        alt=""
        src="/url"
      />
    </div>
    <h1
      class="Heading EmptyState_element"
      data-test-id="cf-ui-heading"
    >
      Heading
    </h1>
    <p
      class="Paragraph EmptyState_paragraph EmptyState_element"
      data-test-id="cf-ui-paragraph"
    >
      This is a description for the empty state. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vulputate, sem a porttitor porttitor, velit nulla lacinia dolor, sit amet interdum ligula lectus hendrerit sem. Aliquam ultricies viverra tincidunt.
    </p>
  </div>
</div>
`;

exports[`renders component with image 1`] = `
<div
  class="EmptyState"
  data-test-id="cf-ui-empty-state"
>
  <div
    class="EmptyState_container"
  >
    <div
      class="EmptyState_element"
    >
      <img
        alt="Image description"
        class="EmptyState_illustration"
        src="url"
        style="height: 250px; width: 340px;"
      />
    </div>
    <h1
      class="Heading EmptyState_element"
      data-test-id="cf-ui-heading"
    >
      Heading
    </h1>
    <p
      class="Paragraph EmptyState_paragraph EmptyState_element"
      data-test-id="cf-ui-paragraph"
    >
      This is a description for the empty state. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vulputate, sem a porttitor porttitor, velit nulla lacinia dolor, sit amet interdum ligula lectus hendrerit sem. Aliquam ultricies viverra tincidunt.
    </p>
  </div>
</div>
`;

exports[`renders the component 1`] = `
<div
  class="EmptyState"
  data-test-id="cf-ui-empty-state"
>
  <div
    class="EmptyState_container"
  >
    <div
      class="EmptyState_element"
    />
    <h1
      class="Heading EmptyState_element"
      data-test-id="cf-ui-heading"
    >
      Heading
    </h1>
    <p
      class="Paragraph EmptyState_paragraph EmptyState_element"
      data-test-id="cf-ui-paragraph"
    >
      This is a description for the empty state.
    </p>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="EmptyState my-extra-class"
  data-test-id="cf-ui-empty-state"
>
  <div
    class="EmptyState_container"
  >
    <div
      class="EmptyState_element"
    />
    <h1
      class="Heading EmptyState_element"
      data-test-id="cf-ui-heading"
    >
      Heading
    </h1>
    <p
      class="Paragraph EmptyState_paragraph EmptyState_element"
      data-test-id="cf-ui-paragraph"
    >
      This is a description for the empty state.
    </p>
  </div>
</div>
`;
